Fix z-index bug showing fresh deal (#89)

--- a/imports/ui/App.css
+++ b/imports/ui/App.css
@@ -81,7 +81,7 @@
 }
 
 .z-index-hidden {
-  z-index: 0;
+  z-index: -10;
 }
 
 #login-buttons a,
